--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins';
     line-height: 1.6;
     margin: 0;
     padding: 0;
@@ -7,11 +7,11 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #f0f0f0;
+    background-color: #ffc433;
 }
 
 .container {
-    background-color: #fff;
+    background-color: #1f1f1f;
     border-radius: 5px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -31,9 +31,9 @@ h1, h2 {
 }
 
 button {
-    background-color: #4CAF50;
+    background-color: #4a4a4a;
     border: none;
-    color: white;
+    color: black;
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
@@ -46,7 +46,7 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #1f1f1f;
 }
 
 #results {
