--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Poppins';
+    font-family: 'sans-serif';
     line-height: 1.6;
     margin: 0;
     padding: 0;
@@ -12,7 +12,7 @@ body {
 
 .container {
     background-color: #f6f6f6;
-    border-radius: 5px;
+    border-radius: 7px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     max-width: 600px;
