--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'sans-serif';
+    font-family: 'Poppins,Sans-serif';
     line-height: 1.6;
     margin: 0;
     padding: 0;
