--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Poppins';
+    font-family: 'open-sans';
     font-style: light;
     font-weight: 200;
     line-height: 1.6;
@@ -23,7 +23,7 @@ body {
 
 h1, h2 {
     text-align: center;
-    font-family: 'Poppins';
+    font-family: 'open-sans';
     font-style: light;
     font-weight: 200;
 }
