--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
-    font-family: 'open-sans';
+    font-family: Poppins, sans-serif;
+    color: white;
     font-style: light;
     font-weight: 200;
     line-height: 1.6;
@@ -9,12 +10,12 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #ffc433;
+    background-color: #FFC433;
 }
 
 .container {
-    background-color: #f6f6f6;
-    border-radius: 7px;
+    background-color: #F6f6f6;
+    border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     max-width: 600px;
@@ -23,9 +24,6 @@ body {
 
 h1, h2 {
     text-align: center;
-    font-family: 'open-sans';
-    font-style: light;
-    font-weight: 200;
 }
 
 #choices {
@@ -36,9 +34,9 @@ h1, h2 {
 }
 
 button {
-    background-color: #4a4a4a;
+    background-color: #1f1f1f;
     border: none;
-    color: black;
+    color: white;
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
@@ -51,7 +49,7 @@ button {
 }
 
 button:hover {
-    background-color: #1f1f1f;
+    background-color: #45a049;
 }
 
 #results {
@@ -61,4 +59,12 @@ button:hover {
 #radarChart {
     max-width: 400px;
     margin: 0 auto;
+}
+
+#downloadPDF {
+    background-color: #3498db;
+}
+
+#downloadPDF:hover {
+    background-color: #2980b9;
 }
