--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: Poppins, sans-serif;
-    color: white;
+    color: #1f1f1f;
     font-style: light;
     font-weight: 200;
     line-height: 1.6;
@@ -49,7 +49,7 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #00b386;
 }
 
 #results {
@@ -57,7 +57,7 @@ button:hover {
 }
 
 #radarChart {
-    max-width: 400px;
+    max-width: 600px;
     margin: 0 auto;
 }
 
