--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
-    color: #1f1f1f;
+    color: #f6f6f6;
     font-weight: 200;
     line-height: 1.6;
     margin: 0;
@@ -13,7 +13,7 @@ body {
 }
 
 .container {
-    background-color: #F6f6f6;
+    background-color: #1f1f1f;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -41,9 +41,9 @@ h1, h2 {
 }
 
 button {
-    background-color: #1f1f1f;
-    border: none;
-    color: white;
+    background-color: #f6f6f6;
+    border: 1px solid white;
+    color: #1f1f1f;
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
@@ -51,38 +51,47 @@ button {
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-    border-radius: 7px;
+    border-radius: 5px;
     transition: background-color 0.3s;
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
 }
 
 button:hover {
-    background-color: #00b386;
+    background-color: #1f1f1f;
+	color:#f6f6f6;
+	border: 1px solid white;
 }
 
 #results {
+    text-align: center;
+	background-color: #f6f6f6;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 0px;
+    max-width: 100%;
+    width: 100%;
     text-align: center;
 }
 
 #radarChart {
     max-width: 100%;
     height: auto;
-    margin: 0 auto 20px;
+    margin: 0 auto 10px;
 }
 
 #downloadPDF {
-    background-color: #3498db;
+    background-color: #cd3400;
 }
 
 #downloadPDF:hover {
-    background-color: #2980b9;
+    background-color: #1f1f1f;
 }
 
 #restart {
-    background-color: #e74c3c;
+    background-color: #00cd9a;
 }
 
 #restart:hover {
-    background-color: #c0392b;
+    background-color: #1f1f1f;
 }
