--- a/styles.css
+++ b/styles.css
@@ -30,11 +30,13 @@ body {
 
 h1 {
     text-align: center;
-    font-weight: 400;
+    font-weight: 100;
+	color: #d9d9d9;
 }
 h2 {
     text-align: center;
-    font-weight: 200;
+    font-weight: 400;
+	color: white;
 }
 
 #choices {
