--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
-    color: #f6f6f6;
+    color: #1f1f1f;
     font-weight: 100;
     line-height: 1.6;
     margin: 0;
@@ -13,7 +13,7 @@ body {
 }
 
 .container {
-    background-color: #1f1f1f;
+    background-color: #f6f6f6;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -31,12 +31,10 @@ body {
 h1 {
     text-align: center;
     font-weight: 100;
-	color: #d9d9d9;
 }
 h2 {
     text-align: center;
     font-weight: 400;
-	color: white;
 }
 
 #choices {
@@ -47,9 +45,9 @@ h2 {
 }
 
 button {
-    background-color: #f6f6f6;
-    border: 1px solid white;
-    color: #1f1f1f;
+    background-color: #1f1f1f;
+    border: 0px solid black;
+    color: #f6f6f6;
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
@@ -64,9 +62,9 @@ button {
 }
 
 button:hover {
-    background-color: #1f1f1f;
-	color:#f6f6f6;
-	border: 1px solid white;
+    background-color: #ffc433;
+	color:#1f1f1f;
+	border: 0px solid grey;
 }
 
 #results {
@@ -91,7 +89,7 @@ button:hover {
 }
 
 #downloadPDF:hover {
-    background-color: #1f1f1f;
+    background-color: #ffc433;
 }
 
 #restart {
@@ -99,5 +97,5 @@ button:hover {
 }
 
 #restart:hover {
-    background-color: #1f1f1f;
+    background-color: #ffc433;
 }
