--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ h1 {
     text-align: center;
     font-weight: 100;
 }
+
 h2 {
     text-align: center;
     font-weight: 400;
@@ -63,13 +64,13 @@ button {
 
 button:hover {
     background-color: #ffc433;
-	color:#1f1f1f;
-	border: 0px solid grey;
+    color:#1f1f1f;
+    border: 0px solid grey;
 }
 
 #results {
     text-align: center;
-	background-color: #f6f6f6;
+    background-color: #f6f6f6;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 0px;
@@ -78,10 +79,10 @@ button:hover {
     text-align: center;
 }
 
-#radarChart {
+#polarChart {
     max-width: 100%;
     height: auto;
-    margin: 0 auto 10px;
+    margin: 0 auto 20px;
 }
 
 #downloadPDF {
@@ -90,7 +91,7 @@ button:hover {
 
 #downloadPDF:hover {
     background-color: #1f1f1f;
-	color: white;
+    color: white;
 }
 
 #restart {
@@ -99,5 +100,46 @@ button:hover {
 
 #restart:hover {
     background-color: #1f1f1f;
-	color: white;
+    color: white;
+}
+
+.progress-container {
+    width: 100%;
+    background-color: #e0e0e0;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+#progress-bar {
+    width: 0;
+    height: 10px;
+    background-color: #FFC433;
+    border-radius: 5px;
+    transition: width 0.3s ease-in-out;
+}
+
+#progress-text {
+    margin-top: 10px;
+    font-size: 14px;
+    color: #1f1f1f;
+}
+
+.quiz-description {
+    background-color: #f6f6f6;
+    padding: 20px;
+    margin-bottom: 20px;
+    text-align: left;
+    font-size: 16px;
+    line-height: 1.6;
+}
+
+#start-quiz {
+    background-color: #1f1f1f;
+    font-size: 18px;
+    padding: 15px 30px;
+}
+
+#start-quiz:hover {
+    background-color: #00cd9a;
+    color: white;
 }
